--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "challenge-json-db",
+  "name": "nodejs-test",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "node test.js"
+    "test": "jest",
+    "start": "node server.js"
   },
-  "keywords": [],
-  "license": "MIT",
-  "devDependencies": {
-    "get-port-sync": "^1.0.0",
-    "jsonist": "^2.1.0",
-    "standard": "^12.0.1",
-    "tape": "^4.10.2"
-  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jest": "^25.2.4",
+    "lodash": "^4.17.15",
+    "standard": "^14.3.3",
+    "supertest": "^4.0.2",
+    "supertest-as-promised": "^4.0.2"
   }
 }
